--- a/_templates/languages/swedish.txt
+++ b/_templates/languages/swedish.txt
@@ -1,9 +1,13 @@
 #Module Templates
 
 #Header
-!!!PRODUCTS_LINK!!! <a href="products.html" class="products textSmall textLight fontInter">Produkter</a>
-!!!CONSULTATION_LINK!!! <a href="consultation.html" class="consultation textSmall textLight fontInter">Konsultation</a>
-!!!FLOWERGRAM_LINK!!! <a href="flowergram.html" class="flowergram textSmall textLight fontInter">Blommogram</a>
+!!!INDEX_LINK!!! index.html
+!!!PRODUCTS_LINK!!! products.html
+!!!CONSULTATION_LINK!!! consultation.html
+!!!FLOWERGRAM_LINK!!! flowergram.html
+!!!PRODUCTS!!! Produkter
+!!!CONSULTATION!!! Konsultation
+!!!FLOWERGRAM!!! Blommogram
 
 #Footer
 !!!DAY!!! Dag
@@ -15,7 +19,7 @@
 !!!FRIDAY!!! Fredag
 !!!SATURDAY!!! Lördag
 !!!SUNDAY!!! Söndag
-!!!CLOSED!!! Stängt
+!!!CLOSED!!! STÄNGT
 !!!ABOUT_US_LINK!!! <a href="about_us.html">Om oss</a>
 !!!CONTACT_INFORMATION!!! Kontaktinformation
 
@@ -26,7 +30,7 @@
 
 #Products
 !!!SHOW_PRICE_WITHOUT_VAT!!! Visa priser utan moms
-!!!FROM!!! Från
+!!!FROM!!! Från:
 !!!TULIPS!!! 10 Tulpaner
 !!!ROSES!!! 10 Rosor
 !!!AUTUMN_BOUQUET!!! Höstbukett
@@ -36,7 +40,7 @@
 
 #Consultation
 !!!CONSULTATION!!! Konsultation
-!!!MINUTES!!! 30 minuter
+!!!MINUTES!!! 250kr / 30 minuter
 !!!CONSULTATION_DESCRIPTION!!! Under en 30-minuters konsultation får du personlig rådgivning av våra florister. Vi går tillsammans igenom dina önskemål, färger, former och känslan du vill förmedla. Kontakta oss så fixar vi en tid med en av våra florister.
 
 #Flowergram
