Language template improved
made it so that when you click the flag to another language it will bring you to the exact same page but on said language instead of just bringing you to index

--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -7,6 +7,8 @@
 !!!ABOUT_US_TITLE!!! About us
 
 #Header
+!!!LANGUAGE_LINK_SWEDISH!!! .html
+!!!LANGUAGE_LINK_ENGLISH!!! _english.html
 !!!INDEX_LINK!!! index_english.html
 !!!PRODUCTS_LINK!!! products_english.html
 !!!CONSULTATION_LINK!!! consultation_english.html
