--- a/_templates/languages/swedish.txt
+++ b/_templates/languages/swedish.txt
@@ -7,6 +7,8 @@
 !!!ABOUT_US_TITLE!!! Om oss
 
 #Header
+!!!LANGUAGE_LINK_SWEDISH!!! .html
+!!!LANGUAGE_LINK_ENGLISH!!! _english.html
 !!!INDEX_LINK!!! index.html
 !!!PRODUCTS_LINK!!! products.html
 !!!CONSULTATION_LINK!!! consultation.html
