Many small fixes
Postcode ordered correctly
Phone number link corrected
Maps link corrected
Capital in title + product names (eng)
"blommogram-tjänst" -> "blommogramtjänst"
Unit of prices changed to sek (eng) + fixed space between price and unit

--- a/_templates/languages/swedish.txt
+++ b/_templates/languages/swedish.txt
@@ -46,6 +46,7 @@
 !!!FUNERAL_WREATH!!! Begravningskrans
 !!!WEDDING_BOUQUET!!! Bröllopsbukett
 !!!SUMMER_BOUQUET!!! Sommarbukett
+!!!PRICE_UNIT!!! kr
 
 #Consultation
 !!!CONSULTATION!!! Konsultation
@@ -57,7 +58,7 @@
 !!!SEND_FLOWERS!!! Skicka blombuketter med vår blommogramtjänst
 !!!POSTAL_CODE!!! Postnummer
 !!!CHECK_POSTAL_CODE!!! Kolla postnummer
-!!!FLOWERGRAM_DESCRIPTION!!! Med vår blommogram-tjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
+!!!FLOWERGRAM_DESCRIPTION!!! Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
 !!!CHECK_POSTAL_CODE_JS!!! postal_code_check_swedish.js
 
 #About Us
