--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -1,10 +1,10 @@
 #Module Templates
 
 #Page Titles 
-!!!PRODUCTS_TITLE!!! Our products
+!!!PRODUCTS_TITLE!!! Our Products
 !!!CONSULTATION_TITLE!!! Consultation
 !!!FLOWERGRAM_TITLE!!! Flowergram
-!!!ABOUT_US_TITLE!!! About us
+!!!ABOUT_US_TITLE!!! About Us
 
 #Header
 !!!LANGUAGE_LINK_SWEDISH!!! .html
@@ -42,14 +42,15 @@
 !!!FROM!!! From:
 !!!TULIPS!!! 10 Tulips
 !!!ROSES!!! 10 Roses
-!!!AUTUMN_BOUQUET!!! Autumn bouquet
-!!!FUNERAL_WREATH!!! Funeral wreath
-!!!WEDDING_BOUQUET!!! Wedding bouquet
-!!!SUMMER_BOUQUET!!! Summer bouquet
+!!!AUTUMN_BOUQUET!!! Autumn Bouquet
+!!!FUNERAL_WREATH!!! Funeral Wreath
+!!!WEDDING_BOUQUET!!! Wedding Bouquet
+!!!SUMMER_BOUQUET!!! Summer Bouquet
+!!!PRICE_UNIT!!! sek
 
 #Consultation
 !!!CONSULTATION!!! Consultation
-!!!MINUTES!!! 250kr / 30 Minutes
+!!!MINUTES!!! 250 sek / 30 Minutes
 !!!CONSULTATION_DESCRIPTION!!! During a 30-minute consultation, you’ll receive personal advice from our florist. Together we’ll go through your wishes, colours and the feeling you want to convey. Contact us and we’ll arrange a time with our florist.
 
 #Flowergram
