Made a noscript behavior
When javascript is disabled removes access to products, consultation and the flower_delivery service pages. Adds a message box that says that javascript is disabled and has contact information in it.

--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -36,6 +36,9 @@
 
 #Index
 !!!WELCOME!!! Welcome to Delikat Flora 
+!!!NOSCRIPT_WARNING!!! Javascript is disabled on your browser.
+!!!NOSCRIPT_MESSAGE!!! Please contact us for more information about our products and services.
+!!!PHONE!!! Phone:
 
 #Products
 !!!SHOW_PRICE_WITHOUT_VAT!!! Show prices without VAT
@@ -54,5 +57,5 @@
 
 #About Us
 !!!OWNER!!! Owner
-!!!HORTONOMA!!! Hortonoma
+!!!HORTONOMA!!! Hortologist
 !!!FLORIST!!! Florist
