--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -45,7 +45,7 @@
 
 #Consultation
 !!!CONSULTATION!!! Consultation
-!!!MINUTES!!! 250 sek / 30 Minutes
+!!!MINUTES!!! 250 SEK / 30 Minutes
 !!!CONSULTATION_DESCRIPTION!!! During a 30-minute consultation, you’ll receive personal advice from our florist. Together we’ll go through your wishes, colours and the feeling you want to convey. Contact us and we’ll arrange a time with our florist.
 
 #Flowergram
