Changed language selection
Made language selection into a drop down menu to facilitate future language options

--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -17,6 +17,8 @@
 !!!PRODUCTS!!! Products
 !!!CONSULTATION!!! Consultation
 !!!FLOWERGRAM!!! Flowergram
+!!!FLAG_LINK!!! ./images/british_flag.jpg
+
 
 #Footer
 !!!OPENING_HOURS!!! Opening hours
