--- a/_templates/languages/swedish.txt
+++ b/_templates/languages/swedish.txt
@@ -4,7 +4,7 @@
 #Page Titles 
 !!!PRODUCTS_TITLE!!! Våra produkter
 !!!CONSULTATION_TITLE!!! Konsultation
-!!!FLOWERGRAM_TITLE!!! Blommogram
+!!!FLOWER_DELIVERY_TITLE!!! Blommogram
 !!!ABOUT_US_TITLE!!! Om oss
 
 #Header
@@ -13,10 +13,10 @@
 !!!INDEX_LINK!!! index.html
 !!!PRODUCTS_LINK!!! products.html
 !!!CONSULTATION_LINK!!! consultation.html
-!!!FLOWERGRAM_LINK!!! flowergram.html
+!!!FLOWER_DELIVERY_LINK!!! flower_delivery.html
 !!!PRODUCTS!!! Produkter
 !!!CONSULTATION!!! Konsultation
-!!!FLOWERGRAM!!! Blommogram
+!!!FLOWER_DELIVERY!!! Blommogram
 !!!FLAG_LINK!!! ./images/swedish_flag.jpg
 
 #Footer
@@ -49,12 +49,12 @@
 !!!MINUTES!!! 250 kr / 30 minuter
 !!!CONSULTATION_DESCRIPTION!!! Under en 30-minuters konsultation får du personlig rådgivning av vår florist. Vi går tillsammans igenom dina önskemål, färger, former och känslan du vill förmedla. Kontakta oss så fixar vi en tid med vår florist.
 
-#Flowergram
-!!!FLOWERGRAM!!! Blommogram
+#Flower delivery
+!!!FLOWER_DELIVERY!!! Blommogram
 !!!SEND_FLOWERS!!! Skicka blombuketter med vår blommogramtjänst
 !!!POSTAL_CODE!!! Postnummer
 !!!CHECK_POSTAL_CODE!!! Kolla postnummer
-!!!FLOWERGRAM_DESCRIPTION!!! Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
+!!!FLOWER_DELIVERY_DESCRIPTION!!! Med vår blommogramtjänst kan du enkelt överraska någon med vackra blommor, levererade direkt till dörren. Välj bukett, skriv en personlig hälsning, så sköter vi resten. Perfekt för födelsedagar, högtider eller vardagsglädje.
 
 #About Us
 !!!OWNER!!! Ägare
