--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -10,6 +10,7 @@
 #Header
 !!!LANGUAGE_LINK_SWEDISH!!! .html
 !!!LANGUAGE_LINK_ENGLISH!!! _english.html
+!!!LANGUAGE_LINK_DANISH!!! _danish.html
 !!!INDEX_LINK!!! index_english.html
 !!!PRODUCTS_LINK!!! products_english.html
 !!!CONSULTATION_LINK!!! consultation_english.html
@@ -18,7 +19,6 @@
 !!!CONSULTATION!!! Consultation
 !!!FLOWER_DELIVERY!!! Send Flowers
 !!!FLAG_LINK!!! ./images/british_flag.jpg
-
 
 #Footer
 !!!OPENING_HOURS!!! Opening hours
@@ -37,7 +37,7 @@
 #Page Templates
 
 #Index
-!!!WELCOME!!! Welcome to Delikat Flora 
+!!!WELCOME!!! Welcome to Delikat Flora!
 !!!NOSCRIPT_WARNING!!! Javascript is disabled on your browser.
 !!!NOSCRIPT_MESSAGE!!! Please contact us for more information about our products and services.
 !!!PHONE!!! Phone:
@@ -47,7 +47,7 @@
 
 #Consultation
 !!!CONSULTATION!!! Consultation
-!!!MINUTES!!! 250 SEK / 30 Minutes
+!!!MINUTES!!! 250 SEK / 30 minutes
 !!!CONSULTATION_DESCRIPTION!!! During a 30-minute consultation, you’ll receive personal advice from our florist. Together we’ll go through your wishes, colours and the feeling you want to convey. Contact us and we’ll arrange a time with our florist.
 
 #Flowergram
