--- a/_templates/languages/swedish.txt
+++ b/_templates/languages/swedish.txt
@@ -10,6 +10,7 @@
 #Header
 !!!LANGUAGE_LINK_SWEDISH!!! .html
 !!!LANGUAGE_LINK_ENGLISH!!! _english.html
+!!!LANGUAGE_LINK_DANISH!!! _danish.html
 !!!INDEX_LINK!!! index.html
 !!!PRODUCTS_LINK!!! products.html
 !!!CONSULTATION_LINK!!! consultation.html
