--- a/_templates/languages/english.txt
+++ b/_templates/languages/english.txt
@@ -1,5 +1,6 @@
 #Module Templates
 !!!LANGUAGE!!! en
+!!!LANGUAGE_ID!!! _english
 
 #Page Titles 
 !!!PRODUCTS_TITLE!!! Our Products
@@ -44,6 +45,9 @@
 
 #Products
 !!!SHOW_PRICE_WITHOUT_VAT!!! Show prices without VAT
+!!!FROM!!! From
+!!!CURRENCY_UNIT!!! SEK
+!!!PRODUCT_NAME!!! product_name_eng
 
 #Consultation
 !!!CONSULTATION!!! Consultation
@@ -55,6 +59,10 @@
 !!!SEND_FLOWERS!!! Send flower bouquets with our flower delivery service.
 !!!POSTAL_CODE!!! Postal code
 !!!CHECK_POSTAL_CODE!!! Check postal code
+!!!ENTER_POSTAL_CODE!!! Enter a postal code in the box
+!!!INVALID_POSTAL_CODE!!! This is not a valid postal code. Please try again
+!!!ACCEPTED_POSTAL_CODE!!! Yes, we can deliver to this postal code! The price for your delivery is 
+!!!REJECTED_POSTAL_CODE!!! Unfortunately, we do not deliver to this postal code
 !!!FLOWER_DELIVERY_DESCRIPTION!!! With our flower delivery service, you can easily surprise someone with beautiful flowers delivered right to their door. Choose a bouquet, write a personal message, and we’ll take care of the rest. Perfect for birthdays, holidays, or everyday joy.
 
 #About Us
